[project]
name = "openai-intent-runtime"
version = "0.1.0"
description = "OpenAI Agents SDK prototype for conversation-led intent compilation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "openai-agents>=0.3.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
intent-runtime = "intent_runtime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intent_runtime"]
